--- a/.gitignore
+++ b/.gitignore
@@ -18,18 +18,11 @@ yarn-error.log*
 *.log
 ssl/
 package-lock.json
-public/Data
-public/Media
-public/MediaGallery
-public/dotenv.php
-public/jjkBands
-public/jjkMusic
-public/jjkPhotos
-public/jjkPhotosSmaller
-public/jjkPhotosThumbs
-public/jjkVideos
+Media
+MediaGallery
+dotenv.php
 .editorconfig
-public/emoncms
+emoncms
 googleAnalytics.js
 images
 secrets.php
