--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
-        "firebase/php-jwt": ">=5.2.0",
-        "jkauflin/jjklogin": ">=1.0.0",
+        "firebase/php-jwt": "^5.2.0",
+        "jkauflin/jjklogin": "^1.0.0",
+        "jkauflin/jjkgallery": "^1.0.0",
         "swiftmailer/swiftmailer": "^6.0"
     }
 }
