--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,9 @@
 {
     "require": {
+        "php": ">=7.0.0",
         "firebase/php-jwt": "^5.2.0",
+        "swiftmailer/swiftmailer": "^6.0",
         "jkauflin/jjklogin": "^1.0.0",
-        "jkauflin/jjkgallery": "^1.0.4",
-        "swiftmailer/swiftmailer": "^6.0"
+        "jkauflin/jjkgallery": "^1.0.4"
     }
 }
