--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,10 @@
 {
     "require": {
-        "php": ">=7.0.0",
-        "firebase/php-jwt": "^5.2.0",
-        "jkauflin/jjklogin": "^1.1.4",
+        "php": ">=8.0.0",
+        "symfony/mailer": "^6.1",
+        "firebase/php-jwt": "^6.4.0",
         "jkauflin/jjkgallery": "^2.1.1",
+        "jkauflin/jjklogin": "^1.2.3",
         "jwilsson/spotify-web-api-php": "^4.1"
     }
 }
